deployment/auth-old/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookman-auth
  labels:
    app: bookman-auth
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bookman-auth
  template:
    metadata:
      labels:
        app: bookman-auth
    spec:
      containers:
        - name: bookman-auth
          image: ghcr.io/mohammadne/bookman-auth:develop
          imagePullPolicy: Always
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          volumeMounts:
            - name: bookman-auth-config
              mountPath: /bin/config.yaml
              subPath: config.yaml
      volumes:
        - name: bookman-auth-config
          configMap:
            name: bookman-auth-config
