deployment/auth-old/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bookman-auth
spec:
  rules:
    - host: auth.bookman
      http:
        paths:
          - path: /
            backend:
              serviceName: bookman-auth
              servicePort: 8080
